// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.pms.contracts.execution.skip;

option java_multiple_files = true;

message SkipInfo {
  string skipCondition = 1;
  bool evaluatedCondition = 2;
}
